# pyrs990

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: analyze.yaml  check.yaml  format.yaml
examples/: has-a-website.json  words-in-name.json
fixtures/: annual_index.csv  bmf_index.csv
pyrs990/: __init__.py  __main__.py  _config.py  _options.py  annual_record.py  app.py  bmf_record.py  cache.py  constants.py  downloader.py  entry_point.py  filing.py  filters.py  formatter.py  index.py  querier.py  result.py  types.py
tests/: test_downloader.py  test_functional.py  version.sh
