[tool.poetry]
name = "pyrs990"
version = "0.1.4"
description = "A tool for fetching and filtering IRS 990 data."
authors = [
    "George Lesica <george@lesica.com>",
    "Smai Fullerton <shfullerton@gmail.com>"
]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/code-for-montana/pyrs990"
repository = "https://github.com/code-for-montana/pyrs990"
keywords = ["open data", "irs", "irs 990", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed"
]

[tool.poetry.scripts]
pyrs990 = "pyrs990.entry_point:entry_point"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
black = "^19.10b0"
pytest = "^5.3.5"
mypy = "^0.761"
isort = "^4.3.21"
autoflake = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

